fix root-scroller not stretching content in release mode

--- a/frontend/css/style.scss
+++ b/frontend/css/style.scss
@@ -337,8 +337,12 @@ select {
             @include single-container();
         }
 
-        &[data-enabled='false'] > .rio-user-root-container {
+        &[data-enabled='false'] {
             @include single-container();
+
+            & > .rio-user-root-container {
+                @include single-container();
+            }
         }
     }
 
